added dashboard layout, added fontawesome and metismenu dependentices

--- a/views/layouts/home-main.handlebars
+++ b/views/layouts/home-main.handlebars
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href='/bootstrap/css/bootstrap.min.css'>
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="/public/lib/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/fontawesome/css/font-awesome.min.css">
 
 
     <!-- Main Style-->
@@ -45,7 +45,7 @@
 <body>
 
     <!-- Navigation -->
-    {{> navigation }}
+    {{> home-nav }}
 
 
     <!-- Main Content Area !-->
@@ -56,7 +56,7 @@
     </section> <!-- ./content !-->
 
     <!-- Footer !-->
-    {{>footer}}
+    {{>home-footer}}
 
 
     <!-- google font -->
