--- a/views/partials/dashboard/nav.handlebars
+++ b/views/partials/dashboard/nav.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-    <div class="navbar-header">
+    <!--<div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -8,9 +8,22 @@
         </button>
         <a class="navbar-brand" href="index.html">Libnav</a>
     </div>
-    <!-- /.navbar-header -->
+    &lt;!&ndash; /.navbar-header &ndash;&gt;-->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="http://oregonstate.edu"><img src="/public/images/osu/logo.jpg?v=1"
+                                                                   alt="oregon state university" width="215"
+                                                                   height="78"/></a>
+        <h1 class="navbar-text">Libnav</h1>
+    </div> <!-- ./navbar-header !-->
 
     <ul class="nav navbar-top-links navbar-right">
+
 
     </ul>
     <!-- /.navbar-top-links -->
