added commit for Matthew

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -2,6 +2,8 @@
 <html lang="ab">
 <head>
     {{> home/head }}
+
+
 </head>
 <body>
     {{> home/nav}}
@@ -14,6 +16,7 @@
     {{> home/footer }}
     {{> home/javascript }}
 
+    <!-- Add d3 scrip here !-->
     <script>
         /*(function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
