--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -44,7 +44,7 @@ body {
 
 .navbar-nav > li > a {
 
-    color: #c34500;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -165,6 +165,11 @@ footer ul li {
 footer div.social-media {
     font-size: 18px;
     padding-top: 15px;
+}
+
+footer p {
+    padding: 0px;
+    margin: 5px 0px;
 }
 
 
