--- a/views/error/index.handlebars
+++ b/views/error/index.handlebars
@@ -1,3 +1,55 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<!DOCTYPE html>
+<html lang="ab">
+<head>
+    {{> home/head }}
+
+
+</head>
+<body>
+    {{> home/nav}}
+
+    <div class="container">
+        <!-- Error Message !-->
+        <div class="row">
+            <div class="col-lg-12">
+                {{{message}}}
+            </div>
+        </div> <!-- /.row !-->
+
+        <!-- Error Status !-->
+        <div class="row">
+            <div class="col-lg-12">
+                {{error.status}}
+            </div>
+        </div> <!-- /.row !-->
+
+        <!-- Error Instructions !-->
+        <div class="row">
+            <div class="col-lg-12">
+                {{{body}}}
+            </div>
+        </div><!-- /.row !-->
+
+    </div><!-- /.container !-->
+
+    {{> home/footer }}
+    {{> home/javascript }}
+
+    <!-- Add d3 scrip here !-->
+    <script>
+        /*(function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-48705802-2', 'auto');
+        ga('send', 'pageview');*/
+    </script>
+</body>
