--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -11,6 +11,7 @@
     <div class="container">
         <h1>{{title}}</h1>
         <p>Welcome to {{title}}</p>
+        {{body}}
     </div>
 
     {{> home/footer }}
