--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -91,13 +91,6 @@ body {
 .navbar-right{
     margin: 0px;
 }
-/*.navbar-fixed-top .nav {*/
-/*padding: 15px 0;*/
-/*}*/
-
-/*.navbar-fixed-top .navbar-brand {*/
-/*padding: 0 15px;*/
-/*}*/
 
 @media (min-width: 768px) {
     .navbar-fixed-top .navbar-brand {
@@ -105,6 +98,8 @@ body {
     }
 }
 
+
+/* --- Tag styleing -- */
 a {
     color: #c34500;
     text-decoration: none;
@@ -131,16 +126,6 @@ h2, h3, h4 {
 
 section {
     background-color: lightgray;
-}
-
-.cover img {
-    width: 100%;
-    height: auto;
-}
-
-.content {
-    background: #fff;
-    padding: 50px 10px;
 }
 
 /* --- Footer styling --- */
@@ -184,6 +169,37 @@ footer p {
 
 .fa-vertical{
     vertical-align: middle;
+}
+
+
+/* --- Login styleing ---- */
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 10px auto;
+}
+
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
+}
+
+.form-signin .checkbox {
+    font-weight: normal;
+}
+
+.form-signin .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.form-signin .form-control:focus {
+    z-index: 2;
 }
 
 
