--- a/views/partials/home/nav.handlebars
+++ b/views/partials/home/nav.handlebars
@@ -33,7 +33,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="/login">Login</a>
+            <a href="/user/login">Login</a>
         </li>
     </ul>
 </div> <!-- /.navbar-collapse -->
