added validation to setups script

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -18,6 +18,8 @@
     {{> home/javascript }}
 
     <!-- Add d3 scrip here !-->
+
+    <!-- Navigation Script tag !-->
     <script>
         /*(function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
