created Known location form and made some small fixes.

--- a/views/partials/dashboard/nav.handlebars
+++ b/views/partials/dashboard/nav.handlebars
@@ -35,6 +35,29 @@
                 <li>
                     <a href="/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
+                <li>
+                    <a href="#"><i class="fa fa-pencil-square-o  fa-fw"></i> Location Forms<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level collapse">
+                        <li>
+                            <a href="dashboard/known">Known</a>
+                        </li>
+                        <li>
+                            <a href="dashboard/unknown">Unknown</a>
+                        </li>
+                        <li>
+                            <a href="dashboard/room">Room</a>
+                        </li>
+                        <li>
+                            <a href="dashboard/servicepoint">Service Point</a>
+                        </li>
+                        <li>
+                            <a href="dashboard/blocked">Blocked</a>
+                        </li>
+
+
+                    </ul>
+                    <!-- /.nav-second-level -->
+                </li>
 
 
             </ul>
