Unknown location created

--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -18,8 +18,8 @@
                 <!-- Page title !-->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Known Location Form</h1>
-                        <p>Known locations are fixed structures in the Library such as bathrooms, emergency exits,
+                        <h1 class="page-header">Unknown Location Form</h1>
+                        <p>Unknow locations are non-fixed locations in the Library such as Learning Commons south wall,
                             etc. </p>
                     </div> <!-- /.col-lg-12 -->
                 </div> <!-- /.row -->
