--- a/views/partials/dashboard/nav.handlebars
+++ b/views/partials/dashboard/nav.handlebars
@@ -28,6 +28,7 @@
     </ul>
     <!-- /.navbar-top-links -->
 
+    <!-- Sidebar !-->
     <div class="navbar-default sidebar" role="navigation">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
@@ -39,19 +40,19 @@
                     <a href="#"><i class="fa fa-pencil-square-o  fa-fw"></i> Location Forms<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
                         <li>
-                            <a href="dashboard/known">Known</a>
+                            <a href="/dashboard/known">Known</a>
                         </li>
                         <li>
-                            <a href="dashboard/unknown">Unknown</a>
+                            <a href="/dashboard/unknown">Unknown</a>
                         </li>
                         <li>
-                            <a href="dashboard/room">Room</a>
+                            <a href="/dashboard/room">Room</a>
                         </li>
                         <li>
-                            <a href="dashboard/servicepoint">Service Point</a>
+                            <a href="/dashboard/servicepoint">Service Point</a>
                         </li>
                         <li>
-                            <a href="dashboard/blocked">Blocked</a>
+                            <a href="/dashboard/blocked">Blocked</a>
                         </li>
 
 
