Created Service Point Form and makde some Correnctions

--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -18,8 +18,8 @@
                 <!-- Page title !-->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Room Location Form</h1>
-                        <p>Rooms are fixed structures in the Library such as study rooms, classrooms, offices,
+                        <h1 class="page-header">Service Point Location Form</h1>
+                        <p>Service Point locations are fixed structures in the Library such as Circulation Desk, Special Collection & Archives Research Center (SCARC),
                             etc. </p>
                     </div> <!-- /.col-lg-12 -->
                 </div> <!-- /.row -->
@@ -33,7 +33,7 @@
                                 <!-- Location name input !-->
                                 <div class="col-lg-6">
                                     <div class="form-group" id="name-group">
-                                        <label for="name">Room Name</label>
+                                        <label for="name">Service Point Name</label>
                                         <input type="text" id="name" name="name" class="form-control"
                                                placeholder="location name"
                                                required autofocus>
@@ -74,15 +74,15 @@
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
 
-                                <!-- Room capacity input !-->
+                                <!-- Service URL input !-->
                                 <div class="col-lg-6">
-                                    <div class="form-group" id="capacity-group">
-                                        <label for="capacity">Room Capacity</label>
-                                        <input type="number" id="capacity" name="capacity" class="form-control"
-                                               placeholder="ex. 32"
+                                    <div class="form-group" id="url-group">
+                                        <label for="url">Service URL</label>
+                                        <input type="url" id="url" name="capacity" class="form-control"
+                                               placeholder="oregonstate.edu"
                                                required autofocus>
                                         </input>
-                                        <p class="help-block">Enter the room capacity.</p>
+                                        <p class="help-block">Enter the service url.</p>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
                             </div>
