added grid and shortest path alg

--- a/views/partials/home/javascript.handlebars
+++ b/views/partials/home/javascript.handlebars
@@ -6,3 +6,12 @@
 
 <!-- Bootstrap js -->
 <script src='/bootstrap/js/bootstrap.min.js'></script>
+
+<!--pathfinding js -->
+<script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
+
+<!--d3.js-->
+<script src="/d3/build/d3.min.js"></script>
+
+<!-- Navigation js -->
+<script src="../../../public/javascripts/navigation-main.js"></script>
