--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -167,6 +167,24 @@ footer div.social-media {
     padding-top: 15px;
 }
 
+.circle {
+	border-radius: 50%;
+	width: 20px;
+	height: 20px; 
+    background-color: black
+}
 
+.grid { margin:1em auto; border-collapse:collapse }
+.grid td {
+    cursor:pointer;
+    width:30px; height:30px;
+    border:1px solid #ccc;
+    text-align:center;
+    font-family:sans-serif; font-size:13px
+}
+.grid td.clicked {
+    background-color:yellow;
+    font-weight:bold; color:red;
+}
 
 
