--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -11,11 +11,13 @@
     <div class="container">
         <h1>{{title}}</h1>
         <p>Welcome to {{title}}</p>
+        
+        <div class="boxMap" style="width:500px;height:500px;"></div>
     </div>
 
     {{> home/footer }}
     {{> home/javascript }}
-
+    
     <!-- Add d3 scrip here !-->
     <script>
         /*(function (i, s, o, g, r, a, m) {
