--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -120,5 +120,7 @@
     <!-- /#wrapper -->
 
     {{> dashboard/javascript }}
+    <script src="/d3/build/d3.min.js"></script>
+    <script src="/public/javascripts/render-map.js"></script>
 
 </body>
