--- a/views/partials/dashboard/nav.handlebars
+++ b/views/partials/dashboard/nav.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" >
     <!--<div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -22,17 +22,40 @@
         <h1 class="navbar-text">Libnav</h1>
     </div> <!-- ./navbar-header !-->
 
-    <ul class="nav navbar-top-links navbar-right">
+<!--    <ul class="nav navbar-default">
+        <li><a href="/">Home</a></li>
 
+    </ul>-->
+    </nav>
 
-    </ul>
-    <!-- /.navbar-top-links -->
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="navbar-collapse collapse navbar-main" id="top-navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="/user/login">Login</a>
+            </li>
+        </ul>
+    </div> <!-- /.navbar-collapse -->
 
     <!-- Sidebar !-->
     <div class="navbar-default sidebar" role="navigation">
-        <div class="sidebar-nav navbar-collapse">
+        <div class="sidebar-nav <!--navbar-collapse-->">
             <ul class="nav" id="side-menu">
-
                 <li>
                     <a href="/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
@@ -54,16 +77,11 @@
                         <li>
                             <a href="/dashboard/blocked">Blocked</a>
                         </li>
-
-
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
-
-
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
     </div>
     <!-- /.navbar-static-side -->
-</nav>
