--- a/public/stylesheets/dashboard-main.css
+++ b/public/stylesheets/dashboard-main.css
@@ -572,3 +572,17 @@ table.dataTable thead .sorting:after {
         border-left-width: 0;
     }
 }
+
+/* ---- Map Modal ---- */
+.modal-dialog {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.modal-content {
+    height: auto;
+    min-height: 100%;
+    border-radius: 0;
+}
