--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -134,10 +134,22 @@
                     <object type="image/svg+xml" id="map-wrapper" data="/public/images/floor-6-redesign.svg">
                         Your browser does not support SVG
                     </object>
+                    <div class="row" id="map-control">
+                        <div class="col-lg-12">
+                            <div class="btn btn-default" id="btn-draw">Draw</div>
+                            <div class="btn btn-primary" id="btn-fill">Fill</div>
+                            <div class="btn btn-warning" id="btn-clear">
+                                Clear
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+
+                    <div class="btn btn-default" data-dismiss="modal">Close</div>
+                    <div class="btn btn-primary">Save changes</div>
+
                 </div>
             </div>
         </div>
