--- a/public/stylesheets/dashboard-main.css
+++ b/public/stylesheets/dashboard-main.css
@@ -574,15 +574,8 @@ table.dataTable thead .sorting:after {
 }
 
 /* ---- Map Modal ---- */
-.modal-dialog {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.modal-content {
-    height: auto;
-    min-height: 100%;
-    border-radius: 0;
+.input-label{
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
