toggalable click to draw and fill added

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -93,8 +93,9 @@
                         Your browser does not support SVG
                     </object>
                                         <!-- Button trigger modal -->
-                                        <button type="button" class="btn btn-primary" data-toggle="modal"
-                                                data-target="#map-modal">
+                                      <!--  <button id="markBttn" type="button" class="btn btn-primary" data-toggle="modal"
+                                                data-target="#map-modal"> --->
+                                          <button  type="button" class="btn btn-primary" id="btn-mark">
                                             Mark Location
                                         </button>
                                     </div> <!-- / .form-group !-->
