--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -27,7 +27,7 @@
                 <!-- Form !-->
                 <div class="row">
                     <div class="col-lg-12">
-                        <form href="/known" method="POST" role="form">
+                        <form href="known" method="POST" role="form">
                             <div class="row">
 
                                 <!-- Location name input !-->
