--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -128,6 +128,7 @@
 
     {{> dashboard/javascript }}
     <script src="/d3/build/d3.min.js"></script>
-    <script src="/public/javascripts/render-map.js"></script>
+    <script src="/public/javascripts/form-submit.js" ></script>
+    <!--<script src="/public/javascripts/render-map.js"></script>-->
 
 </body>
