--- a/public/stylesheets/dashboard-main.css
+++ b/public/stylesheets/dashboard-main.css
@@ -586,6 +586,7 @@ table.dataTable thead .sorting:after {
     height: auto;
     min-height: 100%;
     border-radius: 0;
+}
 
 .input-label{
     max-width: 100%;
