--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -19,24 +19,13 @@
 
     {{> home/footer }}
     {{> home/javascript }}
-    
-    <!-- Add d3 scrip here !-->
 
-    <!-- Navigation Script tag !-->
-    <script>
-        /*(function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    <!--pathfinding js -->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
 
-        ga('create', 'UA-48705802-2', 'auto');
-        ga('send', 'pageview');*/
-    </script>
+    <!--d3.js-->
+    <script src="/d3/build/d3.min.js"></script>
+
+    <!-- Navigation js -->
+    <script src="../../../public/javascripts/navigation-main.js"></script>
 </body>
