made minor fixes

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -69,9 +69,7 @@
                                     <div class="form-group" id="name-group">
                                         <label for="attribute">Attribute</label>
                                         <textarea rows="5" id="attribute" name="attribute" class="form-control"
-                                                  placeholder="Lighting, Natural, Electrical, Socket, etc."
->
-                                                   autofocus></textarea>
+                                                  placeholder="Lighting, Natural, Electrical, Socket, etc." autofocus></textarea>
                                         <p class="help-block">Enter the attributes the location contains.</p>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
