--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -70,7 +70,7 @@
                                         <label for="number">Room #</label>
                                         <input type="number" id="number" name="number" class="form-control"
                                                placeholder="ex. 201"
-                                               required autofocus>
+                                                autofocus>
                                         </input>
                                         <p class="help-block">Enter the room number.</p>
                                     </div>
@@ -82,7 +82,7 @@
                                         <label for="url">Service URL</label>
                                         <input type="url" id="url" name="capacity" class="form-control"
                                                placeholder="oregonstate.edu"
-                                               required autofocus>
+                                                autofocus>
                                         </input>
                                         <p class="help-block">Enter the service url.</p>
                                     </div>
@@ -97,7 +97,7 @@
                                         <label for="attribute">Attribute</label>
                                         <textarea rows="5" id="attribute" name="attribute" class="form-control"
                                                   placeholder="Lighting, Natural, Electrical, Socket, etc."
-                                                  required autofocus></textarea>
+                                                   autofocus></textarea>
                                         <p class="help-block">Enter the attributes the location contains.</p>
                                     </div>
                                 </div> <!-- / .col-lg-6 !-->
@@ -107,7 +107,7 @@
                                     <div class="form-group" id="name-group">
                                         <label for="tag">Tag</label>
                                         <textarea rows="5" id="tag" name="tag" class="form-control"
-                                                  placeholder="Learning Corner, Circulation Desk, etc." required
+                                                  placeholder="Learning Corner, Circulation Desk, etc."
                                                   autofocus></textarea>
                                         <p class="help-block">Enter the tag used to identify the location.</p>
                                     </div>
@@ -158,7 +158,7 @@
 
     {{> dashboard/javascript }}
     <script src="/d3/build/d3.min.js"></script>
+    <script src="/public/javascripts/render-map.js"></script>
     <script src="/public/javascripts/form-submit.js" ></script>
-    <!--<script src="/public/javascripts/render-map.js"></script>-->
 
 </body>
