fix issues with map display informs

--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -118,13 +118,9 @@
                             <!-- Map Location Input!-->
                             <div class="row">
                                 <div class="col-lg-12">
+
                                     <p class="input-label">Mark Location</p>
 
-                                    <!-- Map Canvas !-->
-                                    <object type="image/svg+xml" id="map-wrapper"
-                                            data="/public/images/floor-6-redesign.svg">
-                                        Your browser does not support SVG
-                                    </object>
 
                                     <!-- Map Control !-->
                                     <div class="row" id="map-control">
@@ -134,6 +130,13 @@
                                             <div class="btn btn-warning" id="btn-clear">Clear</div>
                                         </div>
                                     </div>
+
+                                    <div class="form-group" id="map-group">
+                                        <object type="image/svg+xml" id="map-wrapper" data="/public/images/floor-6-redesign.svg">
+                                            Your browser does not support SVG
+                                        </object>
+                                    </div> <!-- / .form-group !-->
+
                                 </div> <!-- / .col-lg-12 !-->
                             </div> <!-- / .row !-->
 
