refactored stylign and updated view to reflect change

--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> dashboard/head }}
+    {{> head }}
 </head>
 
 <body>
@@ -25,6 +25,7 @@
 
     </div>
     <!-- /#wrapper -->
+    {{> footer }}
 
     {{> dashboard/javascript }}
 
