--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> dashboard/head }}
+    {{> head }}
 
     <!-- Map dispaly CSS !-->
     <link rel="stylesheet" type="text/css" href="/public/stylesheets/map-display.css"/>
@@ -155,7 +155,7 @@
             <!-- /.container-fluid -->
         </div>
         <!-- /#page-wrapper -->
-
+        {{>footer}}
     </div>
     <!-- /#wrapper -->
 
