--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -30,7 +30,7 @@
 <link rel="stylesheet" href="/fontawesome/css/font-awesome.min.css">
 
 <!-- Main Style-->
-<link rel="stylesheet" href='/public/stylesheets/dashboard-main.css'>
+<!--<link rel="stylesheet" href='/public/stylesheets/dashboard-main.css'>-->
 
 <link rel="stylesheet" href="/public/stylesheets/main.css">
 
