--- a/views/setup/index.handlebars
+++ b/views/setup/index.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> home/head }}
+    {{> head }}
 
 
 </head>
@@ -132,7 +132,7 @@
         </div>
     </div>
 
-    {{> home/footer }}
+    {{> footer }}
     {{> home/javascript }}
     <script src="/approvejs/approve.min.js"></script>
     <script src="/public/javascripts/setup.js"></script>
