--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> dashboard/head }}
+    {{> head }}
 
     <!-- Map dispaly CSS !-->
     <link rel="stylesheet" type="text/css" href="/public/stylesheets/map-display.css" />
@@ -154,11 +154,9 @@
             <!-- /.container-fluid -->
         </div>
         <!-- /#page-wrapper -->
-
+        {{> footer }}
     </div>
     <!-- /#wrapper -->
-
-
 
     {{> dashboard/javascript }}
     <script src="/d3/build/d3.min.js"></script>
