--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> home/head }}
+    {{> head }}
 
 </head>
 <body>
@@ -42,7 +42,7 @@
         </div> <!-- /.row !-->
     </div> <!-- /.container !-->
 
-    {{> home/footer }}
+    {{> footer }}
     {{> home/javascript }}
 
     <script src="/public/javascripts/login.js"></script>
