--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -14,11 +14,11 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <!--<div class="form-group" id="map-group">
+                        <div id="map-group">
                             <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-2.svg">
                                 Your browser does not support SVG
                             </object>
-                        </div> &lt;!&ndash; / .form-group !&ndash;&gt;-->
+                        </div> <!-- / #map-group !-->
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
