--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -6,7 +6,8 @@
 
 <body>
     <div id="wrapper">
-        {{> dashboard/nav }}
+        {{> nav }}
+        {{> dashboard/sidebar }}
 
         <!-- Page Content -->
         <div id="page-wrapper">
