--- a/views/error/development.handlebars
+++ b/views/error/development.handlebars
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> home/head }}
+    {{> head }}
 
 
 </head>
 <body>
-    {{> home/nav}}
+    {{> nav}}
 
     <div class="container">
         <h1>{{title}}</h1>
@@ -19,7 +19,7 @@
 
     </div>
 
-    {{> home/footer }}
+    {{> footer }}
     {{> home/javascript }}
 
     <!-- Add d3 scrip here !-->
