--- a/views/dashboard/servicepoint.handlebars
+++ b/views/dashboard/servicepoint.handlebars
@@ -10,7 +10,8 @@
 
 <body>
     <div id="wrapper">
-        {{> dashboard/nav }}
+        {{> nav }}
+        {{> dashboard/sidebar }}
 
         <!-- Page Content -->
         <div id="page-wrapper">
