--- a/views/dashboard/unknown.handlebars
+++ b/views/dashboard/unknown.handlebars
@@ -9,7 +9,8 @@
 
 <body>
     <div id="wrapper">
-        {{> dashboard/nav }}
+        {{> nav }}
+        {{> dashboard/sidebar }}
 
         <!-- Page Content -->
         <div id="page-wrapper">
