--- a/views/error/login.handlebars
+++ b/views/error/login.handlebars
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ab">
 <head>
-    {{> home/head }}
+    {{> head }}
 
 
 </head>
 <body>
-    {{> home/nav}}
+    {{> nav}}
 
     <div class="container">
         <!-- Error Message !-->
@@ -35,7 +35,7 @@
 
     </div><!-- /.container !-->
 
-    {{> home/footer }}
+    {{> footer }}
     {{> home/javascript }}
 
     <!-- Add d3 scrip here !-->
