--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -2,12 +2,12 @@
 <html lang="ab">
 <head>
     {{> head }}
-
 </head>
 
 <body>
     <div id="wrapper">
-        {{> home/appnav }}
+        {{> nav }}
+        {{> home/sidebar }}
 
         <!-- Page Content -->
         <div id="page-wrapper">
