fix load error metisMenu.min.js

--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -33,5 +33,10 @@
 
 
     {{> dashboard/javascript }}
+    <!-- MetisMenu js -->
+    <script src='/metismenu/metisMenu.min.js'></script>
+
+    <!-- Dashboard js -->
+    <script src='/public/javascripts/dashboard-admin.js'></script>
 
 </body>
