--- a/views/partials/dashboard/javascript.handlebars
+++ b/views/partials/dashboard/javascript.handlebars
@@ -8,7 +8,7 @@
 <script src='/bootstrap/js/bootstrap.min.js'></script>
 
 <!-- MetisMenu js -->
-<script src='/metismenu/metismenu.min.js'></script>
+<script src='/metismenu/metisMenu.min.js'></script>
 
 <!-- Dashboard js -->
 <script src='/public/javascripts/dashboard-admin.js'></script>
