known location inserted intodatabase

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -51,12 +51,12 @@
                                         <select id="floor" name="floor" class="form-control"
                                                 placeholder="floor"
                                                 required autofocus>
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
+                                            <option value=1>1</option>
+                                            <option value=2>2</option>
+                                            <option value=3>3</option>
+                                            <option value=4>4</option>
+                                            <option value=5rs>5</option>
+                                            <option value=6>6</option>
                                         </select>
                                         <p class="help-block">Enter the floor where location is located.</p>
                                     </div>
