Added navigation form to walkable paths

--- a/views/partials/dashboard/sidebar.handlebars
+++ b/views/partials/dashboard/sidebar.handlebars
@@ -22,7 +22,7 @@
                         <a href="/dashboard/servicepoint">Service Point</a>
                     </li>
                     <li>
-                        <a href="/dashboard/blocked">Blocked</a>
+                        <a href="/dashboard/navigation">Navigation</a>
                     </li>
                 </ul>
                 <!-- /.nav-second-level -->
