new refactor, need to add more to the map. Will need to refactor such that this works with the new changes to development

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -134,8 +134,8 @@
     {{> dashboard/javascript }}
     <script src="/d3/build/d3.min.js"></script>
      <script src="/lodash/lodash.js"></script>
-     <!----<script src="/public/javascripts/draw-polygon.js"></script> -->
-    <script src="/public/javascripts/render-polygons.js"></script>
+     <script src="/public/javascripts/draw-polygon.js"></script> -->
+    <!--- <script src="/public/javascripts/render-polygons.js"></script> -->
      <script src="/public/javascripts/form-submit.js" ></script>
 
 
