grid on nav page+

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -136,6 +136,8 @@
      <script src="/lodash/lodash.js"></script>
      <!----<script src="/public/javascripts/draw-polygon.js"></script> -->
     <script src="/public/javascripts/render-polygons.js"></script>
+        <!-- Pathfinding js-->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
      <script src="/public/javascripts/form-submit.js" ></script>
 
 
