--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -20,7 +20,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">Defining Navigaiton Grid</h1>
-                        <p>some thing here</p>
+                           <div id="map-group" style=" display:flex">
+                            <object type="image/svg+xml" id="map-wrapper" data="/public/images/map-floor-1.svg" style="pointer-events:all;">
+                                Your browser does not support SVG
+                            </object>
+                            <section id="grid" style="position:absolute"></section>
+                        </div> <!-- / #map-group !-->
                     </div> <!-- /.col-lg-12 -->
                 </div> <!-- /.row -->
 
@@ -36,32 +41,31 @@
                                 <option value=2>2</option>
                                 <option value=3>3</option>
                                 <option value=4>4</option>
-                                <option value=5rs>5</option>
+                                <option value=5>5</option>
                                 <option value=6>6</option>
                             </select>
                             <p class="help-block">Enter the floor where location is located.</p>
                         </div>
                     </div> <!-- / .col-lg-3 !-->
-
                     <!-- Defining Paths !-->
                     <div class="col-lg-3">
                         <p class="input-label">Defining paths</p>
-                        <div id="btn-walkable" class="btn btn-default">Walkable</div>
-                        <div id="btn-unwalkable" class="btn btn-default">Unwalkable</div>
+                        <div id="setWalkTrue" class="btn btn-default">Walkable</div>
+                        <div id="setWalkFalse" class="btn btn-default">Unwalkable</div>
                     </div> <!-- col-lg-6 !-->
 
                     <!-- Defining Paths !-->
                     <div class="col-lg-3">
                         <p class="input-label">Test Paths</p>
-                        <div id="btn-test" class="btn btn-default">Test</div>
-                        <div id="btn-clear-test" class="btn btn-default">Clear</div>
+                        <div id="navLine" class="btn btn-default">Test</div>
+                        <div id="btn-clear-test" onclick="clearPaths()" class="btn btn-default">Clear</div>
                     </div> <!-- col-lg-6 !-->
 
                     <!-- Save Grid !-->
                     <div class="col-lg-3 ">
                         <p class="input-label ">Submit Grid</p>
                         <form href="navigation" method="POST" role="form">
-                            <button type="submit" class="btn btn-success" id="btn-save">Save</button>
+                            <button type="submit" class="btn btn-success" id="btn-save" onclick="saveGrid()">Save</button>
                         </form>
                     </div> <!-- col-lg-6 !-->
 
@@ -80,7 +84,13 @@
     {{> dashboard/javascript }}
     <script src="/d3/build/d3.min.js"></script>
     <script src="/lodash/lodash.js"></script>
-    <!-- Stephen put navigation js here for drawing the grid. !-->
+    <script src="../../public/javascripts/navigation-main.js"></script>
+     <!--polygon-hover.js-->
+    <script src="/public/javascripts/polygon-hover.js"></script>
+        <!-- Pathfinding js-->
+    <script src="/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
+    <script>loadGrid();</script>
 
+    
 
 </body>
