rearranged javascript file call in vies, added mapapi, added db call for all know locations, added sidebar navagation

--- a/views/dashboard/navigation.handlebars
+++ b/views/dashboard/navigation.handlebars
@@ -78,9 +78,9 @@
     <!-- /#wrapper -->
 
     {{> dashboard/javascript }}
-    <script src="/d3/build/d3.min.js"></script>
+
+    <!-- Lodash JS !-->
     <script src="/lodash/lodash.js"></script>
-    <!-- Stephen put navigation js here for drawing the grid. !-->
 
 
 </body>
