--- a/views/dashboard/room.handlebars
+++ b/views/dashboard/room.handlebars
@@ -160,9 +160,9 @@
     <!-- /#wrapper -->
 
     {{> dashboard/javascript }}
-    <script src="/d3/build/d3.min.js"></script>
-    <script src="/public/javascripts/render-map.js"></script>
-    <script src="/public/javascripts/form-submit.js" ></script>
+
+    <!-- Form Control JS !-->
+    <script src="/public/javascripts/control-form.js" ></script>
 
 
 </body>
