--- a/views/partials/dashboard/javascript.handlebars
+++ b/views/partials/dashboard/javascript.handlebars
@@ -12,3 +12,6 @@
 
 <!-- Dashboard js -->
 <script src='/public/javascripts/dashboard-admin.js'></script>
+
+<!-- D3 JS !-->
+<script src="/d3/build/d3.min.js"></script>
