--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -131,7 +131,7 @@
     <!-- /#wrapper -->
 
     {{> dashboard/javascript }}
-    <script src="/d3/build/d3.min.js"></script>
-    <!--<script src="/public/javascripts/render-map.js"></script>-->
-    <script src="/public/javascripts/form-control.js" ></script>
+
+    <!-- Form Controls JS !-->
+    <script src="/public/javascripts/control-form.js" ></script>
 </body>
