added shap drawing feature to home page

--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -131,6 +131,8 @@
     <!-- /#wrapper -->
 
     {{> dashboard/javascript }}
+    <script src="/public/javascripts/draw-polygon.js" ></script>
+
 
     <!-- Form Controls JS !-->
     <script src="/public/javascripts/control-form.js" ></script>
