--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -52,6 +52,8 @@
     <!-- Lodash js -->
     <script src="lodash/lodash.js"></script>
 
+    <script src="/public/javascripts/draw-polygon.js" ></script>
+
     <!-- Home UI controls JS !-->
     <script src="/public/javascripts/control-home.js"></script>
 
