fix error with fill in draw-polygon, added dra location buttons and functionality.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -799,6 +799,13 @@ table.dataTable thead .sorting:after {
     font-weight: bold;
 }
 
+#map-control{
+    height: 65px;
+}
+#location-draw-controls{
+    margin-top: 5px;
+}
+
 
 
 
