--- a/views/dashboard/known.handlebars
+++ b/views/dashboard/known.handlebars
@@ -54,7 +54,7 @@
                                             <option value=2>2</option>
                                             <option value=3>3</option>
                                             <option value=4>4</option>
-                                            <option value=5rs>5</option>
+                                            <option value=5>5</option>
                                             <option value=6>6</option>
                                         </select>
                                         <p class="help-block">Enter the floor where location is located.</p>
@@ -98,6 +98,13 @@
                                         <div class="col-lg-6">
                                             <div class="btn btn-default" id="btn-location-draw">Draw Location</div>
                                             <div class="btn btn-default" id="btn-location-select">Select Location</div>
+                                            <div class="row hidden" id="location-draw-controls">
+                                                <div class="col-lg-12">
+                                                    <div class="btn btn-primary" id="btn-location-fill">Fill</div>
+                                                    <div class="btn btn-warning" id="btn-location-clear">Clear</div>
+                                                    <div class="btn btn-success" id="btn-location-save">Save</div>
+                                                </div>
+                                            </div>
                                             <!--<div class="btn btn-default" id="btn-draw">Draw</div>-->
                                             <!--<div class="btn btn-primary" id="btn-fill">Fill</div>-->
                                             <!--<div class="btn btn-warning" id="btn-clear">Clear</div>-->
